:tada: Add new structure with User and JWT connection
