# api/src/main/java/fr/phenix333/semantop/model/semantic/Ref.java
@@ -1,9 +1,12 @@
 package fr.phenix333.semantop.model.semantic;
 
+import jakarta.persistence.Column;
 import jakarta.persistence.Entity;
 import jakarta.persistence.GeneratedValue;
 import jakarta.persistence.GenerationType;
 import jakarta.persistence.Id;
+import jakarta.persistence.JoinColumn;
+import jakarta.persistence.ManyToOne;
 import jakarta.persistence.Table;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
@@ -13,17 +16,18 @@ import lombok.Setter;
 @Getter
 @NoArgsConstructor
 @Setter
-@Table(name = "word_searchs")
-public class WordSearch {
+@Table(name = "refs")
+public class Ref {
 
 	@Id
 	@GeneratedValue(strategy = GenerationType.AUTO)
 	private Long id;
 
-	private String word;
+	@Column(unique = true, nullable = false)
+	private String ref;
 
-	private double degree;
-
-	private int place;
+	@ManyToOne
+	@JoinColumn(name = "word_id", nullable = false)
+	private Word word;
 
 }
